--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c83b2e30",
+   "id": "71d460fa",
    "metadata": {},
    "outputs": [
     {
@@ -29,39 +29,49 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the before and after Excel files\n",
-    "df_before = pd.read_excel('before.xlsx')\n",
-    "df_after = pd.read_excel('after.xlsx')\n",
+    "def update_category_for_static(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Step 1: Create a copy of 'Billed/Not Billed' column\n",
+    "    df['Category for Static'] = df['Billed/Not Billed']\n",
     "\n",
-    "# Ensure both have same column order\n",
-    "df_after = df_after[df_before.columns]\n",
+    "    # Step 2: Apply rule a\n",
+    "    mask_a = (df['Employee Class'].isin(['Intern', 'External'])) & (df['Billed/Not Billed'] == 'Not billed')\n",
+    "    \n",
+    "    # Step 3: Apply rule b\n",
+    "    mask_b = (df['GCB Grade'].isin(['3', 'MD'])) & (df['Billed/Not Billed'] == 'Not billed')\n",
     "\n",
-    "# Create a comparison DataFrame\n",
-    "comparison_df = df_before != df_after\n",
+    "    # Step 4: Apply rule c (and additional similar ones)\n",
+    "    not_billed_conditions = [\n",
+    "        (\n",
+    "            (df['GFOC Country'] == 'Electronic Data Process Mexico') &\n",
+    "            (df['Billing Entity'] == 'GR_MX_Electronic Data Process Mexico, S.A de C.V.') &\n",
+    "            (df['Billed/Not Billed'] == 'Billed')\n",
+    "        ),\n",
+    "        # Add other condition blocks here, similar to the above.\n",
+    "        # Example placeholder:\n",
+    "        # (\n",
+    "        #     (df['GFOC Country'] == 'XYZ') &\n",
+    "        #     (df['Billing Entity'] == 'ABC') &\n",
+    "        #     (df['Billed/Not Billed'] == 'Billed')\n",
+    "        # ),\n",
+    "    ]\n",
     "\n",
-    "# Create a new DataFrame to store changes\n",
-    "changes = pd.DataFrame()\n",
+    "    # Combine all Not Billed masks\n",
+    "    mask_c = pd.Series(False, index=df.index)\n",
+    "    for cond in not_billed_conditions:\n",
+    "        mask_c |= cond\n",
     "\n",
-    "# Iterate through columns and rows to collect differences\n",
-    "for col in df_before.columns:\n",
-    "    mask = comparison_df[col]\n",
-    "    if mask.any():\n",
-    "        for index in df_before[mask].index:\n",
-    "            changes = pd.concat([changes, pd.DataFrame({\n",
-    "                'Row': [index],\n",
-    "                'Column': [col],\n",
-    "                'Before': [df_before.at[index, col]],\n",
-    "                'After': [df_after.at[index, col]]\n",
-    "            })], ignore_index=True)\n",
+    "    # Step 5: Update the column with priorities\n",
+    "    df.loc[mask_a | mask_b, 'Category for Static'] = 'Others'\n",
+    "    df.loc[mask_c, 'Category for Static'] = 'Not Billed'\n",
     "\n",
-    "# View changes\n",
-    "print(changes)\n"
+    "    return df\n",
+    "main_df = update_category_for_static(main_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f4433cb",
+   "id": "7e063c80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195c9560",
+   "id": "eef908c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8ff7d0",
+   "id": "b0f19ba3",
    "metadata": {},
    "outputs": [],
    "source": [
