--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71d460fa",
+   "id": "eab401e5",
    "metadata": {},
    "outputs": [
     {
@@ -27,51 +27,40 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def update_category_for_static(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # Step 1: Create a copy of 'Billed/Not Billed' column\n",
-    "    df['Category for Static'] = df['Billed/Not Billed']\n",
-    "\n",
-    "    # Step 2: Apply rule a\n",
-    "    mask_a = (df['Employee Class'].isin(['Intern', 'External'])) & (df['Billed/Not Billed'] == 'Not billed')\n",
+    "def flag_new_bpce_combinations(main_df, last_month_df):\n",
+    "    # Step 1: Clean Business Partner Cost Center (remove dashes and leading zeros)\n",
+    "    def clean_bpcc(series):\n",
+    "        return series.astype(str).str.replace('-', '', regex=False).str.lstrip('0')\n",
     "    \n",
-    "    # Step 3: Apply rule b\n",
-    "    mask_b = (df['GCB Grade'].isin(['3', 'MD'])) & (df['Billed/Not Billed'] == 'Not billed')\n",
+    "    main_df['Cleaned BPCC'] = clean_bpcc(main_df['Business Partner Cost Center'])\n",
+    "    last_month_df['Cleaned BPCC'] = clean_bpcc(last_month_df['Business Partner Cost Center'])\n",
     "\n",
-    "    # Step 4: Apply rule c (and additional similar ones)\n",
-    "    not_billed_conditions = [\n",
-    "        (\n",
-    "            (df['GFOC Country'] == 'Electronic Data Process Mexico') &\n",
-    "            (df['Billing Entity'] == 'GR_MX_Electronic Data Process Mexico, S.A de C.V.') &\n",
-    "            (df['Billed/Not Billed'] == 'Billed')\n",
-    "        ),\n",
-    "        # Add other condition blocks here, similar to the above.\n",
-    "        # Example placeholder:\n",
-    "        # (\n",
-    "        #     (df['GFOC Country'] == 'XYZ') &\n",
-    "        #     (df['Billing Entity'] == 'ABC') &\n",
-    "        #     (df['Billed/Not Billed'] == 'Billed')\n",
-    "        # ),\n",
-    "    ]\n",
+    "    # Step 2: Create concatenated keys\n",
+    "    main_df['BPCC_Billing_Key'] = main_df['Cleaned BPCC'] + main_df['Billing Entity']\n",
+    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Cleaned BPCC'] + last_month_df['Billing Entity']\n",
     "\n",
-    "    # Combine all Not Billed masks\n",
-    "    mask_c = pd.Series(False, index=df.index)\n",
-    "    for cond in not_billed_conditions:\n",
-    "        mask_c |= cond\n",
+    "    # Step 3: Identify new combinations not in last month's file\n",
+    "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
     "\n",
-    "    # Step 5: Update the column with priorities\n",
-    "    df.loc[mask_a | mask_b, 'Category for Static'] = 'Others'\n",
-    "    df.loc[mask_c, 'Category for Static'] = 'Not Billed'\n",
+    "    # Step 4: Create or update Comment column\n",
+    "    if 'Comment' not in main_df.columns:\n",
+    "        main_df['Comment'] = ''\n",
+    "    \n",
+    "    main_df.loc[unmatched_mask, 'Comment'] = main_df.loc[unmatched_mask, 'Comment'].replace('', 'Business Partner Cost Center & Billing Entity not found in last month file')\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].ne(''), 'Comment'] += ' | Business Partner Cost Center & Billing Entity not found in last month file'\n",
     "\n",
-    "    return df\n",
-    "main_df = update_category_for_static(main_df)"
+    "    # Optional: clean up intermediate columns if not needed\n",
+    "    main_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "    last_month_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "\n",
+    "    return main_df\n",
+    "main_df = flag_new_bpce_combinations(main_df, last_month_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e063c80",
+   "id": "a569079f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef908c6",
+   "id": "92c47c97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f19ba3",
+   "id": "d20e2fdb",
    "metadata": {},
    "outputs": [],
    "source": [
