--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eab401e5",
+   "id": "ec348913",
    "metadata": {},
    "outputs": [
     {
@@ -42,25 +42,25 @@
     "    # Step 3: Identify new combinations not in last month's file\n",
     "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
     "\n",
-    "    # Step 4: Create or update Comment column\n",
+    "    # Step 4: Create or update Comment column (only if unmatched and avoid duplication)\n",
+    "    comment_text = 'Business Partner Cost Center & Billing Entity not found in last month file'\n",
     "    if 'Comment' not in main_df.columns:\n",
     "        main_df['Comment'] = ''\n",
     "    \n",
-    "    main_df.loc[unmatched_mask, 'Comment'] = main_df.loc[unmatched_mask, 'Comment'].replace('', 'Business Partner Cost Center & Billing Entity not found in last month file')\n",
-    "    main_df.loc[unmatched_mask & main_df['Comment'].ne(''), 'Comment'] += ' | Business Partner Cost Center & Billing Entity not found in last month file'\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].eq(''), 'Comment'] = comment_text\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].ne('') & ~main_df['Comment'].str.contains(comment_text), 'Comment'] += ' | ' + comment_text\n",
     "\n",
-    "    # Optional: clean up intermediate columns if not needed\n",
+    "    # Clean up intermediate columns\n",
     "    main_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
     "    last_month_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
     "\n",
-    "    return main_df\n",
-    "main_df = flag_new_bpce_combinations(main_df, last_month_df)\n"
+    "    return main_df\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a569079f",
+   "id": "52ad669d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c47c97",
+   "id": "80d43f76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d20e2fdb",
+   "id": "4c9be23b",
    "metadata": {},
    "outputs": [],
    "source": [
