--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ec348913",
+   "id": "11960172",
    "metadata": {},
    "outputs": [
     {
@@ -30,29 +30,31 @@
     "def flag_new_bpce_combinations(main_df, last_month_df):\n",
     "    # Step 1: Clean Business Partner Cost Center (remove dashes and leading zeros)\n",
     "    def clean_bpcc(series):\n",
-    "        return series.astype(str).str.replace('-', '', regex=False).str.lstrip('0')\n",
-    "    \n",
+    "        return series.astype(str).str.replace('-', '', regex=False).str.lstrip('0').str.upper()\n",
+    "\n",
+    "    # Convert Billing Entity to uppercase as well\n",
     "    main_df['Cleaned BPCC'] = clean_bpcc(main_df['Business Partner Cost Center'])\n",
+    "    main_df['Billing Entity Clean'] = main_df['Billing Entity'].astype(str).str.upper()\n",
+    "    main_df['BPCC_Billing_Key'] = main_df['Cleaned BPCC'] + main_df['Billing Entity Clean']\n",
+    "\n",
     "    last_month_df['Cleaned BPCC'] = clean_bpcc(last_month_df['Business Partner Cost Center'])\n",
+    "    last_month_df['Billing Entity Clean'] = last_month_df['Billing Entity'].astype(str).str.upper()\n",
+    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Cleaned BPCC'] + last_month_df['Billing Entity Clean']\n",
     "\n",
-    "    # Step 2: Create concatenated keys\n",
-    "    main_df['BPCC_Billing_Key'] = main_df['Cleaned BPCC'] + main_df['Billing Entity']\n",
-    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Cleaned BPCC'] + last_month_df['Billing Entity']\n",
-    "\n",
-    "    # Step 3: Identify new combinations not in last month's file\n",
+    "    # Step 2: Identify new combinations not in last month's file\n",
     "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
     "\n",
-    "    # Step 4: Create or update Comment column (only if unmatched and avoid duplication)\n",
+    "    # Step 3: Create or update Comment column\n",
     "    comment_text = 'Business Partner Cost Center & Billing Entity not found in last month file'\n",
     "    if 'Comment' not in main_df.columns:\n",
     "        main_df['Comment'] = ''\n",
-    "    \n",
+    "\n",
     "    main_df.loc[unmatched_mask & main_df['Comment'].eq(''), 'Comment'] = comment_text\n",
     "    main_df.loc[unmatched_mask & main_df['Comment'].ne('') & ~main_df['Comment'].str.contains(comment_text), 'Comment'] += ' | ' + comment_text\n",
     "\n",
     "    # Clean up intermediate columns\n",
-    "    main_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
-    "    last_month_df.drop(columns=['Cleaned BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "    main_df.drop(columns=['Cleaned BPCC', 'Billing Entity Clean', 'BPCC_Billing_Key'], inplace=True)\n",
+    "    last_month_df.drop(columns=['Cleaned BPCC', 'Billing Entity Clean', 'BPCC_Billing_Key'], inplace=True)\n",
     "\n",
     "    return main_df\n"
    ]
@@ -60,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ad669d",
+   "id": "2d341dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d43f76",
+   "id": "d2bc09a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c9be23b",
+   "id": "906b7368",
    "metadata": {},
    "outputs": [],
    "source": [
