--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "11960172",
+   "id": "92cb9b10",
    "metadata": {},
    "outputs": [
     {
@@ -27,42 +27,29 @@
     }
    ],
    "source": [
-    "def flag_new_bpce_combinations(main_df, last_month_df):\n",
-    "    # Step 1: Clean Business Partner Cost Center (remove dashes and leading zeros)\n",
-    "    def clean_bpcc(series):\n",
-    "        return series.astype(str).str.replace('-', '', regex=False).str.lstrip('0').str.upper()\n",
+    "def add_billing_entity_name_from_ospd(main_df, ospd_df):\n",
+    "    # Ensure both keys are strings for consistent merge\n",
+    "    main_df['Business Partner Cost Center'] = main_df['Business Partner Cost Center'].astype(str).str.lstrip('0').str.upper()\n",
+    "    ospd_df['CC_ID'] = ospd_df['CC_ID'].astype(str).str.lstrip('0').str.upper()\n",
     "\n",
-    "    # Convert Billing Entity to uppercase as well\n",
-    "    main_df['Cleaned BPCC'] = clean_bpcc(main_df['Business Partner Cost Center'])\n",
-    "    main_df['Billing Entity Clean'] = main_df['Billing Entity'].astype(str).str.upper()\n",
-    "    main_df['BPCC_Billing_Key'] = main_df['Cleaned BPCC'] + main_df['Billing Entity Clean']\n",
+    "    # Merge to fetch LE_Description as new column\n",
+    "    main_df = main_df.merge(\n",
+    "        ospd_df[['CC_ID', 'LE_Description']].rename(columns={\n",
+    "            'CC_ID': 'Business Partner Cost Center',\n",
+    "            'LE_Description': 'Billing Entity name as per OSPD'\n",
+    "        }),\n",
+    "        on='Business Partner Cost Center',\n",
+    "        how='left'\n",
+    "    )\n",
     "\n",
-    "    last_month_df['Cleaned BPCC'] = clean_bpcc(last_month_df['Business Partner Cost Center'])\n",
-    "    last_month_df['Billing Entity Clean'] = last_month_df['Billing Entity'].astype(str).str.upper()\n",
-    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Cleaned BPCC'] + last_month_df['Billing Entity Clean']\n",
-    "\n",
-    "    # Step 2: Identify new combinations not in last month's file\n",
-    "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
-    "\n",
-    "    # Step 3: Create or update Comment column\n",
-    "    comment_text = 'Business Partner Cost Center & Billing Entity not found in last month file'\n",
-    "    if 'Comment' not in main_df.columns:\n",
-    "        main_df['Comment'] = ''\n",
-    "\n",
-    "    main_df.loc[unmatched_mask & main_df['Comment'].eq(''), 'Comment'] = comment_text\n",
-    "    main_df.loc[unmatched_mask & main_df['Comment'].ne('') & ~main_df['Comment'].str.contains(comment_text), 'Comment'] += ' | ' + comment_text\n",
-    "\n",
-    "    # Clean up intermediate columns\n",
-    "    main_df.drop(columns=['Cleaned BPCC', 'Billing Entity Clean', 'BPCC_Billing_Key'], inplace=True)\n",
-    "    last_month_df.drop(columns=['Cleaned BPCC', 'Billing Entity Clean', 'BPCC_Billing_Key'], inplace=True)\n",
-    "\n",
-    "    return main_df\n"
+    "    return main_df\n",
+    "main_df = add_billing_entity_name_from_ospd(main_df, ospd_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d341dba",
+   "id": "410ae93d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2bc09a5",
+   "id": "bf4123a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906b7368",
+   "id": "55331bce",
    "metadata": {},
    "outputs": [],
    "source": [
