--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3c91276e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def detect_duplicate_billing_names(df):\n",
+    "    if 'Comment2' not in df.columns:\n",
+    "        df['Comment2'] = ''\n",
+    "    \n",
+    "    def extract_name_tokens(text):\n",
+    "        if pd.isna(text):\n",
+    "            return set()\n",
+    "        text = str(text).strip()\n",
+    "        if '@' in text:\n",
+    "            text = text.split('@')[0]  # only local part of email\n",
+    "        text = re.sub(r'[^a-zA-Z]', ' ', text)  # remove digits/symbols\n",
+    "        tokens = text.lower().split()\n",
+    "        return set(tokens)\n",
+    "\n",
+    "    # Group by PSID\n",
+    "    psid_groups = df.groupby('Billing Contact PSID')\n",
+    "\n",
+    "    for psid, group in psid_groups:\n",
+    "        names = group['Billing Contact Name'].dropna().unique()\n",
+    "        if len(names) <= 1:\n",
+    "            continue  # no conflict\n",
+    "\n",
+    "        # Try to see if all names seem to refer to same person\n",
+    "        base_tokens = [extract_name_tokens(name) for name in names]\n",
+    "\n",
+    "        conflict = False\n",
+    "        for i in range(len(base_tokens)):\n",
+    "            for j in range(i + 1, len(base_tokens)):\n",
+    "                # If intersection is empty => likely different persons\n",
+    "                if base_tokens[i].isdisjoint(base_tokens[j]):\n",
+    "                    conflict = True\n",
+    "                    break\n",
+    "            if conflict:\n",
+    "                break\n",
+    "\n",
+    "        if conflict:\n",
+    "            df.loc[group.index, 'Comment2'] = df.loc[group.index, 'Comment2'].replace('', 'Billing contact has duplicate names', regex=False)\n",
+    "            df.loc[group.index, 'Comment2'] = df.loc[group.index, 'Comment2'].apply(lambda x: x if 'Billing contact has duplicate names' in x else f\"{x} | Billing contact has duplicate names\")\n",
+    "\n",
+    "    return df\n",
+    "main_df = detect_duplicate_billing_names(main_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4a8769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_billing_contact_psid(df):\n",
+    "    def format_psid(val):\n",
+    "        val_str = str(val).strip()\n",
+    "        if val_str.upper() == 'IPAC':\n",
+    "            return val_str  # Leave as is\n",
+    "        return val_str.zfill(8) if val_str.isdigit() else val_str\n",
+    "\n",
+    "    df['Billing Contact PSID'] = df['Billing Contact PSID'].apply(format_psid)\n",
+    "    return df\n",
+    "# Format the column in your main input file (main_df)\n",
+    "main_df = format_billing_contact_psid(main_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "635d3358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def check_multiple_billing_entities(df):\n",
+    "    # Ensure columns are strings\n",
+    "    df['Business Partner Cost Center'] = df['Business Partner Cost Center'].astype(str)\n",
+    "    df['Billing Entity'] = df['Billing Entity'].astype(str)\n",
+    "    \n",
+    "    # Create a mapping of cost center to unique billing entities\n",
+    "    cc_entity_group = df.groupby('Business Partner Cost Center')['Billing Entity'].nunique().reset_index()\n",
+    "    cc_entity_group = cc_entity_group[cc_entity_group['Billing Entity'] > 1]\n",
+    "\n",
+    "    # List of cost centers with multiple billing entities\n",
+    "    conflict_ccs = cc_entity_group['Business Partner Cost Center'].tolist()\n",
+    "\n",
+    "    # Initialize 'Comment2' column if 'Comment' already exists\n",
+    "    if 'Comment' in df.columns:\n",
+    "        if 'Comment2' not in df.columns:\n",
+    "            df['Comment2'] = ''\n",
+    "\n",
+    "    # Apply comments row-wise\n",
+    "    def comment_logic(row):\n",
+    "        if row['Business Partner Cost Center'] in conflict_ccs:\n",
+    "            if row['Business Partner Cost Center'].startswith('9'):\n",
+    "                return \"Billing cost center begins with digit 9.\"\n",
+    "            else:\n",
+    "                return \"Multiple billing entities found.\"\n",
+    "        return \"\"\n",
+    "\n",
+    "    # Add comments accordingly\n",
+    "    if 'Comment2' in df.columns:\n",
+    "        df['Comment2'] = df.apply(lambda row: comment_logic(row), axis=1)\n",
+    "    else:\n",
+    "        df['Comment'] = df.apply(\n",
+    "            lambda row: row['Comment'] + \" | \" + comment_logic(row) if row['Business Partner Cost Center'] in conflict_ccs and row['Comment'] else comment_logic(row),\n",
+    "            axis=1\n",
+    "        )\n",
+    "    \n",
+    "    return df\n",
+    "main_df = check_multiple_billing_entities(main_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "92cb9b10",
    "metadata": {},
