--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a547b2ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_currency_column(main_df):\n",
+    "    # Define country-to-currency mapping\n",
+    "    country_currency_map = {\n",
+    "        'MEXICO': 'MXN',\n",
+    "        'INDIA': 'INR',\n",
+    "        'POLAND': 'PLN',\n",
+    "        'CHINA': 'CNY'\n",
+    "    }\n",
+    "\n",
+    "    # Standardize and compare country columns\n",
+    "    def determine_currency(row):\n",
+    "        gfoc_country = str(row.get('GFOC Country', '')).strip().upper()\n",
+    "        country = str(row.get('Country', '')).strip().upper()\n",
+    "\n",
+    "        if gfoc_country == country:\n",
+    "            return country_currency_map.get(gfoc_country, 'USD')\n",
+    "        else:\n",
+    "            return 'USD'\n",
+    "\n",
+    "    # Apply logic to each row\n",
+    "    main_df['Currency'] = main_df.apply(determine_currency, axis=1)\n",
+    "    return main_df\n",
+    "main_df = add_currency_column(main_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3c91276e",
    "metadata": {},
    "outputs": [],
