--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b365dfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flag_new_bpce_combinations(main_df, last_month_df):\n",
+    "    # Clean for concatenation purpose only (strip, lstrip zeroes)\n",
+    "    def clean_for_key(series):\n",
+    "        return series.astype(str).str.strip().str.lstrip('0')\n",
+    "\n",
+    "    # Create temporary cleaned keys for matching\n",
+    "    main_df['Temp_BPCC'] = clean_for_key(main_df['Business Partner Cost Center'])\n",
+    "    last_month_df['Temp_BPCC'] = clean_for_key(last_month_df['Business Partner Cost Center'])\n",
+    "\n",
+    "    main_df['BPCC_Billing_Key'] = main_df['Temp_BPCC'] + main_df['Billing Entity'].astype(str).str.strip()\n",
+    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Temp_BPCC'] + last_month_df['Billing Entity'].astype(str).str.strip()\n",
+    "\n",
+    "    # Identify unmatched combinations\n",
+    "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
+    "\n",
+    "    # Comment logic\n",
+    "    comment_text = 'Business Partner Cost Center & Billing Entity not found in last month file'\n",
+    "    if 'Comment' not in main_df.columns:\n",
+    "        main_df['Comment'] = ''\n",
+    "\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].eq(''), 'Comment'] = comment_text\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].ne('') & ~main_df['Comment'].str.contains(comment_text, case=False), 'Comment'] += ' | ' + comment_text\n",
+    "\n",
+    "    # Drop temporary keys\n",
+    "    main_df.drop(columns=['Temp_BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "    last_month_df.drop(columns=['Temp_BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "\n",
+    "    return main_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a547b2ab",
    "metadata": {},
    "outputs": [],
