--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "74a7dede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_multiple_billing_entities(main_df):\n",
+    "    \"\"\"\n",
+    "    Detects and resolves cases where the same Business Partner Cost Center (BPCC)\n",
+    "    is associated with multiple Billing Entities. If a mismatched entity is found\n",
+    "    to be a substring of the more common one (typically containing an underscore),\n",
+    "    it is replaced and commented.\n",
+    "    \"\"\"\n",
+    "    # Make a copy for safe manipulation\n",
+    "    df = main_df.copy()\n",
+    "    \n",
+    "    # Ensure string format\n",
+    "    df['Business Partner Cost Center'] = df['Business Partner Cost Center'].astype(str)\n",
+    "    df['Billing Entity'] = df['Billing Entity'].astype(str)\n",
+    "\n",
+    "    # Group by BPCC and find those with multiple billing entities\n",
+    "    multi_entity_bpcc = df.groupby('Business Partner Cost Center')['Billing Entity'].nunique()\n",
+    "    multi_entity_bpcc = multi_entity_bpcc[multi_entity_bpcc > 1].index\n",
+    "\n",
+    "    # Create comment column if not already present\n",
+    "    comment_col = 'Billing Entity Validation Comment'\n",
+    "    if comment_col not in df.columns:\n",
+    "        df[comment_col] = ''\n",
+    "\n",
+    "    for bpcc in multi_entity_bpcc:\n",
+    "        subset = df[df['Business Partner Cost Center'] == bpcc]\n",
+    "        entities = subset['Billing Entity'].str.lower().unique()\n",
+    "\n",
+    "        # Count frequencies to find the most frequent entity with underscores\n",
+    "        entity_counts = subset['Billing Entity'].str.lower().value_counts()\n",
+    "        correct_entities = [e for e in entity_counts.index if '_' in e]\n",
+    "        if not correct_entities:\n",
+    "            continue  # No candidate \"correct\" entries to fix against\n",
+    "\n",
+    "        correct_entity = correct_entities[0]  # Most frequent with \"_\"\n",
+    "        correct_entity_original_case = subset[\n",
+    "            subset['Billing Entity'].str.lower() == correct_entity\n",
+    "        ]['Billing Entity'].iloc[0]\n",
+    "\n",
+    "        # Find mismatched entities that are substrings of correct one\n",
+    "        for ent in entities:\n",
+    "            if ent == correct_entity:\n",
+    "                continue\n",
+    "            if ent in correct_entity:\n",
+    "                # Find rows with this entity and fix\n",
+    "                match_mask = (\n",
+    "                    (df['Business Partner Cost Center'] == bpcc) &\n",
+    "                    (df['Billing Entity'].str.lower() == ent)\n",
+    "                )\n",
+    "                old_value = df.loc[match_mask, 'Billing Entity']\n",
+    "                df.loc[match_mask, 'Billing Entity'] = correct_entity_original_case\n",
+    "                df.loc[match_mask, comment_col] += (\n",
+    "                    \"Billing Entity replaced from '\" +\n",
+    "                    old_value + \"' to '\" + correct_entity_original_case +\n",
+    "                    \"' based on substring match logic.\"\n",
+    "                )\n",
+    "\n",
+    "            else:\n",
+    "                # Otherwise comment as unresolved mismatch\n",
+    "                mismatch_mask = (\n",
+    "                    (df['Business Partner Cost Center'] == bpcc) &\n",
+    "                    (df['Billing Entity'].str.lower() == ent)\n",
+    "                )\n",
+    "                df.loc[mismatch_mask, comment_col] += (\n",
+    "                    \"Multiple distinct Billing Entities found against same BPCC.\"\n",
+    "                )\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4b365dfa",
    "metadata": {},
    "outputs": [],
