--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,105 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a7dede",
+   "id": "bd1d864a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_multiple_billing_entities(main_df):\n",
+    "    \"\"\"\n",
+    "    Detects and resolves mismatches in Billing Entity for the same Business Partner Cost Center.\n",
+    "    - Replaces mismatching entries if substring logic applies.\n",
+    "    - Flags all rows when mismatch cannot be resolved.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - updated_df: DataFrame with corrected Billing Entity and comments\n",
+    "    - unresolved_rows_df: DataFrame with unresolved mismatches for logging or review\n",
+    "    \"\"\"\n",
+    "    df = main_df.copy()\n",
+    "\n",
+    "    # Ensure consistent data types\n",
+    "    df['Business Partner Cost Center'] = df['Business Partner Cost Center'].astype(str)\n",
+    "    df['Billing Entity'] = df['Billing Entity'].astype(str)\n",
+    "\n",
+    "    # Create comment column if not present\n",
+    "    comment_col = 'Billing Entity Validation Comment'\n",
+    "    if comment_col not in df.columns:\n",
+    "        df[comment_col] = ''\n",
+    "\n",
+    "    # Track unresolved rows\n",
+    "    unresolved_rows = []\n",
+    "\n",
+    "    # Identify BPCCs linked to multiple billing entities\n",
+    "    multi_bpccs = df.groupby('Business Partner Cost Center')['Billing Entity'].nunique()\n",
+    "    multi_bpccs = multi_bpccs[multi_bpccs > 1].index\n",
+    "\n",
+    "    for bpcc in multi_bpccs:\n",
+    "        subset = df[df['Business Partner Cost Center'] == bpcc]\n",
+    "        entities = subset['Billing Entity'].str.lower().unique()\n",
+    "        entity_counts = subset['Billing Entity'].str.lower().value_counts()\n",
+    "\n",
+    "        # Try to find a good candidate (underscore & appears multiple times)\n",
+    "        correct_candidates = [e for e in entity_counts.index if '_' in e]\n",
+    "        if correct_candidates:\n",
+    "            correct_entity = correct_candidates[0]\n",
+    "            correct_original = subset[\n",
+    "                subset['Billing Entity'].str.lower() == correct_entity\n",
+    "            ]['Billing Entity'].iloc[0]\n",
+    "\n",
+    "            mismatch_unresolved = False\n",
+    "\n",
+    "            for ent in entities:\n",
+    "                if ent == correct_entity:\n",
+    "                    continue\n",
+    "                if ent in correct_entity:\n",
+    "                    mask = (\n",
+    "                        (df['Business Partner Cost Center'] == bpcc) &\n",
+    "                        (df['Billing Entity'].str.lower() == ent)\n",
+    "                    )\n",
+    "                    old_vals = df.loc[mask, 'Billing Entity']\n",
+    "                    df.loc[mask, 'Billing Entity'] = correct_original\n",
+    "                    df.loc[mask, comment_col] += (\n",
+    "                        \"Billing Entity replaced from '\" +\n",
+    "                        old_vals + \"' to '\" + correct_original +\n",
+    "                        \"' based on substring match logic.\"\n",
+    "                    )\n",
+    "                else:\n",
+    "                    mismatch_unresolved = True\n",
+    "\n",
+    "            if mismatch_unresolved:\n",
+    "                mask_all = (df['Business Partner Cost Center'] == bpcc)\n",
+    "                df.loc[mask_all, comment_col] += (\n",
+    "                    \"Multiple distinct Billing Entities found against same BPCC.\"\n",
+    "                )\n",
+    "                unresolved_rows.append(df[mask_all])\n",
+    "        else:\n",
+    "            # No good candidate at all\n",
+    "            mask_all = (df['Business Partner Cost Center'] == bpcc)\n",
+    "            df.loc[mask_all, comment_col] += (\n",
+    "                \"Multiple distinct Billing Entities found against same BPCC.\"\n",
+    "            )\n",
+    "            unresolved_rows.append(df[mask_all])\n",
+    "\n",
+    "    # Combine all unresolved into one DataFrame\n",
+    "    if unresolved_rows:\n",
+    "        unresolved_rows_df = pd.concat(unresolved_rows, ignore_index=True)\n",
+    "    else:\n",
+    "        unresolved_rows_df = pd.DataFrame(columns=df.columns)\n",
+    "\n",
+    "    return df, unresolved_rows_df\n",
+    "\n",
+    "\n",
+    "final_df, unresolved_df = fix_multiple_billing_entities(main_df)\n",
+    "\n",
+    "# Save if needed\n",
+    "with pd.ExcelWriter('output.xlsx', engine='openpyxl', mode='a') as writer:\n",
+    "    unresolved_df.to_excel(writer, sheet_name='Unresolved Billing Entities', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8adad742",
    "metadata": {},
    "outputs": [],
    "source": [
