--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd1d864a",
+   "id": "9994d323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_currency_column(df):\n",
+    "    \"\"\"\n",
+    "    Adds a 'Currency' column based on GFOC Country and Country columns.\n",
+    "    If both countries match and the country is in predefined list, assign local currency.\n",
+    "    Otherwise, assign 'USD'.\n",
+    "    \"\"\"\n",
+    "    # Mapping dictionary\n",
+    "    country_currency_map = {\n",
+    "        \"Mexico\": \"MXN\",\n",
+    "        \"India\": \"INR\",\n",
+    "        \"Poland\": \"PLN\",\n",
+    "        \"China\": \"CNY\"\n",
+    "    }\n",
+    "\n",
+    "    def determine_currency(row):\n",
+    "        if pd.isna(row['GFOC Country']) or pd.isna(row['Country']):\n",
+    "            return \"USD\"\n",
+    "        if row['GFOC Country'].strip().lower() == row['Country'].strip().lower():\n",
+    "            return country_currency_map.get(row['Country'].strip(), \"USD\")\n",
+    "        else:\n",
+    "            return \"USD\"\n",
+    "\n",
+    "    df['Currency'] = df.apply(determine_currency, axis=1)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "659984e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8adad742",
+   "id": "086b4c03",
    "metadata": {},
    "outputs": [],
    "source": [
