--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4add2389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flag_ospd_mismatched_billing_entities(df):\n",
+    "    def normalize_entity(entity):\n",
+    "        if pd.isna(entity):\n",
+    "            return ''\n",
+    "        entity = str(entity).strip()\n",
+    "        # Remove abbreviation prefix if present (everything before and including the first underscore)\n",
+    "        return entity.split('_', 1)[-1] if '_' in entity else entity\n",
+    "\n",
+    "    # Apply normalization for comparison only\n",
+    "    normalized_billing = df['Billing Entity'].apply(normalize_entity).str.lower()\n",
+    "    normalized_ospd = df['Billing Entity name as per OSPD'].fillna('').astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    # Compare normalized values\n",
+    "    df['Billing Entity Comment (OSPD Check)'] = np.where(\n",
+    "        normalized_billing != normalized_ospd,\n",
+    "        'Mismatch with OSPD Billing Entity value',\n",
+    "        ''\n",
+    "    )\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9994d323",
    "metadata": {},
    "outputs": [],
